force-app/main/default/objects/Contact/fields/Academic_Department__c.field-meta.xml
<CustomField>
    <fullName>Academic_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Department</label>
    <referenceTo>Academic_Department__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>