force-app/main/default/objects/Contact/fields/Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>