force-app/main/default/objects/Contact/fields/Direct_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Direct_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direct Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>