force-app/main/default/objects/Contact/fields/Institutional_Email__c.field-meta.xml
<CustomField>
    <fullName>Institutional_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Institutional Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>