force-app/main/default/objects/Contact/fields/Main_Subject__c.field-meta.xml
<CustomField>
    <fullName>Main_Subject__c</fullName>
    <label>Main Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>