force-app/main/default/objects/Contact/fields/Position_or_Role__c.field-meta.xml
<CustomField>
    <fullName>Position_or_Role__c</fullName>
    <label>Position or Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>